<resources>
    <string name="app_name">Custom Widgets</string>
    <string name="custom_message">Custom Message ToastView</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Custom Widgets</string>
    <string name="nav_header_subtitle">dvinfosys0@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_textview">TextView</string>
    <string name="menu_editext">EditText</string>
    <string name="menu_checkbox">CheckBox</string>
    <string name="menu_button">Button</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_radiobutton">Radio Button</string>
    <string name="menu_switch">Switch</string>
    <string name="menu_toggle_button">ToggleButton</string>
    <string name="menu_circle_imageView">CircleImageView</string>
    <string name="menu_imageview">ImageView</string>
    <string name="menu_seek_bar">SeekBar</string>
    <string name="menu_video_player">VP Video Player</string>
    <string name="menu_toastview">ToastView</string>
    <string name="menu_numbercounter">Number Counter</string>
    <string name="menu_countdownView">CountdownView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_progressview">ProgressView</string>
    <string name="menu_color_picker">Color Picker</string>
    <string name="menu_folding_cell">Folding Cell</string>

    <array name="last_next_length_2">
        <item>last</item>
        <item>next</item>
    </array>

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_searchable_spinner">Searchable Spinner</string>
    <string name="no_selection">No Selection</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="start_custom_target">start custom target</string>
    <string name="start_simple_target">start simple target</string>
    <string name="menu_spotlight">Spotlight</string>
    <string name="menu_paper_onboarding">Paper Onboarding</string>
    <string name="menu_expanding_collection">Expanding Collection</string>
    <string name="menu_auto_select">Auto Select</string>
    <string name="menu_alert_dialog">DAlert Dialog</string>
    <string name="show_material_progress">Show Materail progress</string>
    <string name="a_basic_message">Basic Dialog</string>
    <string name="a_title_with_a_text_under">Title with text</string>
    <string name="show_error_message">Error dialog</string>
    <string name="a_success_message">Success dialog</string>
    <string name="a_warning_message_with_confirm_button">Warning with confirm button</string>
    <string name="warning_message_with_cancel_confirm_button">Warninig with cancel and confirm buttion</string>
    <string name="message_with_custom_icon">Massage with custom icon</string>
    <string name="menu_spin_wheel">Spin Wheel</string>
    <string name="menu_resize_recycler">Recycler Resize</string>
    <string name="menu_input_code">InputCode</string>
    <string name="menu_sticker">StickerView</string>
    <string name="font_name">Smoothy.otf</string>
    <string name="menu_msearch">MSeachbar</string>
    <string name="menu_d_toast">DToast</string>
    <string name="menu_range_seekbar">Range Seekbar</string>

</resources>
