<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_textview"
            android:icon="@drawable/ic_textview"
            android:title="@string/menu_textview" />
        <item
            android:id="@+id/nav_edittext"
            android:icon="@drawable/ic_edittext"
            android:title="@string/menu_editext" />
        <item
            android:id="@+id/nav_checkbox"
            android:icon="@drawable/ic_check_box"
            android:title="@string/menu_checkbox" />
        <item
            android:id="@+id/nav_button"
            android:title="@string/menu_button" />
        <item
            android:id="@+id/nav_radiobutton"
            android:icon="@drawable/ic_radio_button"
            android:title="@string/menu_radiobutton" />
        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/ic_switch"
            android:title="@string/menu_switch" />
        <item
            android:id="@+id/nav_togglebutton"
            android:icon="@drawable/ic_switch"
            android:title="@string/menu_toggle_button" />

        <item
            android:id="@+id/nav_imageview"
            android:icon="@drawable/ic_imageview"
            android:title="@string/menu_imageview" />
        <item
            android:id="@+id/nav_seekbar"
            android:title="@string/menu_seek_bar" />

        <item
            android:id="@+id/nav_toastview"
            android:icon="@drawable/ic_toastview"
            android:title="@string/menu_toastview" />
        <item
            android:id="@+id/nav_number_counter"
            android:title="@string/menu_numbercounter" />
        <item
            android:id="@+id/nav_countdownview"
            android:title="@string/menu_countdownView" />
        <item
            android:id="@+id/nav_progressview"
            android:icon="@drawable/ic_progressview"
            android:title="@string/menu_progressview" />
        <item
            android:id="@+id/nav_color_picker"
            android:icon="@drawable/ic_color_picker"
            android:title="@string/menu_color_picker" />

        <item
            android:id="@+id/nav_alert_dialog"
            android:icon="@drawable/ic_toastview"
            android:title="@string/menu_alert_dialog" />

        <item
            android:id="@+id/nav_folding_cell"
            android:title="@string/menu_folding_cell" />
        <item
            android:id="@+id/nav_spin_wheel"
            android:title="@string/menu_spin_wheel" />

        <item
            android:id="@+id/nav_searchable_spinner"
            android:title="@string/menu_searchable_spinner" />
        <item
            android:id="@+id/nav_spotlight"
            android:title="@string/menu_spotlight" />
        <item
            android:id="@+id/nav_paper_onboarding"
            android:title="@string/menu_paper_onboarding" />

        <item
            android:id="@+id/nav_expanding_collection"
            android:title="@string/menu_expanding_collection" />
        <item
            android:id="@+id/nav_auto_select"
            android:title="@string/menu_auto_select" />
        <item
            android:id="@+id/nav_resize_recycler"
            android:title="@string/menu_resize_recycler" />
        <item
            android:id="@+id/nav_input_code"
            android:title="@string/menu_input_code" />

        <item
            android:id="@+id/nav_sticker"
            android:title="@string/menu_sticker" />

        <item android:id="@+id/nav_msearchbar"
            android:title="@string/menu_msearch"/>

        <item
            android:id="@+id/nav_d_toast"
            android:icon="@drawable/ic_toastview"
            android:title="@string/menu_d_toast" />
        <item
            android:id="@+id/nav_range_seekbar"
            android:title="@string/menu_range_seekbar" />
    </group>
</menu>
